fix(consonant-blocks): add spacing between column text and picture in mobile

--- a/templates/consonant/blocks/columns/columns.css
+++ b/templates/consonant/blocks/columns/columns.css
@@ -173,6 +173,7 @@ main .columns .column-picture img {
     padding: 0;
     width: 100%;
     max-width: 400px;
+    margin-bottom: 16px;
   }
 
   main .columns.large .columns-row .column {
